right_section to fix word alignment when mobile

--- a/client/lab_4/style.css
+++ b/client/lab_4/style.css
@@ -318,4 +318,8 @@ form input {
       justify-content: center;
       align-items: center;
     }
+
+    .right_section {
+      align-items: flex-start;
+    }
 }
